--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -18,18 +18,41 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
       </dependency>
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-server</artifactId>
-    <version>2.41.0</version>
+    <version>3.0.1</version>
 </dependency>
 <dependency>
     <groupId>net.jcip</groupId>
     <artifactId>jcip-annotations</artifactId>
     <version>1.0</version>
 </dependency>
+<dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.9.8</version>
+      <scope>test</scope>
+    </dependency>
  </dependencies>
+<build>
+<pluginManagement>
+<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20.1</version>
+        <configuration>
+          <includes>
+          <include>**/*Test.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+
+    </plugins>
+          </pluginManagement>
+</build>
 </project>
