--- a/ExplicitWait/pom.xml
+++ b/ExplicitWait/pom.xml
@@ -19,6 +19,7 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+           <mainClass>explicitPackage.ExplicitDemo</mainClass>
         </configuration>
       </plugin>
     </plugins>
