--- a/ExplicitWait/pom.xml
+++ b/ExplicitWait/pom.xml
@@ -13,13 +13,22 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.4.3</version>
+        <configuration>
+                <includes>
+                        <include>${basedir}/src/**/Explicit*.java</include>
+                </includes>
+        </configuration>
+</plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-           <mainClass>explicitPackage.ExplicitDemo</mainClass>
         </configuration>
       </plugin>
     </plugins>
