--- a/ExplicitWait/pom.xml
+++ b/ExplicitWait/pom.xml
@@ -8,7 +8,13 @@
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
         <version>3.8.1</version>
-    </dependency>  
+    </dependency>
+    <dependency>
+  <groupId>org.testng</groupId>
+  <artifactId>testng</artifactId>
+  <version>6.11</version>
+</dependency>
+      
     </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -16,17 +22,19 @@
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>2.21.0</version>
         <configuration>
-                <includes>
-                        <include>${basedir}/src/**/Explicit*.java</include>
-                </includes>
+           <suiteXmlFiles>
+                     <suiteXmlFile>testng.xml</suiteXmlFile>
+                 </suiteXmlFiles>
         </configuration>
 </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
+        <fork>true</fork>
+        <executable>C:\Program Files\Java\jdk1.8.0_151\bin\javac.exe</executable>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
