--- a/ExplicitWait/.classpath
+++ b/ExplicitWait/.classpath
@@ -17,5 +17,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Sekhar/Eclipse-Workspace/Lib/log4j1.2.17/log4j.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
