--- a/ExplicitWait/pom.xml
+++ b/ExplicitWait/pom.xml
@@ -19,7 +19,11 @@
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
 </dependency>
-      
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.16</version>
+</dependency>
     </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
