--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -47,7 +47,7 @@
         <version>2.20.1</version>
         <configuration>
           <includes>
-          <include>**/*Test.java</include>
+          <include>**/*Test1.java</include>
           </includes>
         </configuration>
       </plugin>
